# cloxpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  broken_loop.lox  challenge_chap12.md  class.lox  dummy.lox  format.sh  make.sh
cloxpp/: CMakeLists.txt
cloxpp/app/: main.cpp
cloxpp/include/: astPrinter.hpp  ast_printer.hpp  environment.hpp  error.hpp  expr.hpp  interpreter.hpp  lox.hpp  parser.hpp  run_time_error.hpp  scanner.hpp  stmt.hpp  test_tree.hpp  tokens.hpp
cloxpp/src/: interpreter.cpp  interpreter.hpp  lox.cpp  lox.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  tokens.cpp
cloxpp/src/ast/: expr.hpp  stmt.hpp
cloxpp/src/callable/: callable.hpp  lox_classes.cpp  lox_classes.hpp  lox_functions.cpp  lox_functions.hpp  lox_instance.cpp  native_functions.cpp  native_functions.hpp
cloxpp/src/core/: interpreter.cpp  interpreter.hpp  lox.hpp  parser.cpp  parser.hpp  scanner.cpp
cloxpp/src/debug/: ast_printer.hpp  test_tree.hpp
cloxpp/src/runtime/: callable.hpp  environment.hpp  lox_functions.cpp  lox_functions.hpp  resolver.cpp  resolver.hpp
cloxpp/src/utils/: error.hpp  run_time_error.hpp  tokens.hpp
cloxpptw/: CMakeLists.txt
cloxpptw/app/: main.cpp
cloxpptw/loxlib/ast/: expr.hpp  stmt.hpp
cloxpptw/loxlib/callable/: callable.hpp  lox_classes.cpp  lox_classes.hpp  lox_functions.cpp  lox_functions.hpp  lox_instance.cpp  lox_instance.hpp  native_functions.cpp  native_functions.hpp
cloxpptw/loxlib/core/: interpreter.cpp  interpreter.hpp  lox.cpp  lox.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp
cloxpptw/loxlib/debug/: ast_printer.hpp
cloxpptw/loxlib/runtime/: environment.hpp  resolver.cpp  resolver.hpp
cloxpptw/loxlib/utils/: error.hpp  tokens.hpp
cloxpptw/src/callable/: native_functions.cpp  native_functions.hpp
cloxpptw/src/core/: interpreter.cpp  lox.cpp  parser.cpp  scanner.cpp
cloxpptw/src/runtime/: resolver.cpp
cloxpptw/src/utils/: tokens.hpp
cloxppvm/: CMakeLists.txt
cloxppvm/app/: main.cpp
cloxppvm/loxlib/: common.hpp
cloxppvm/loxlib/chunk/: chunk.cpp  chunk.hpp
cloxppvm/loxlib/compiler/: compiler.cpp  compiler.hpp
cloxppvm/loxlib/scanner/: scanner.cpp  scanner.hpp
cloxppvm/loxlib/utilities/: stack.hpp  tokens.cpp  tokens.hpp
cloxppvm/loxlib/value/: value.cpp  value.hpp
cloxppvm/loxlib/vm/: vm.cpp  vm.hpp
grammar/: challenge.grammar  commas_ternary.cpp  lox.grammar
pointers/: pointer_cheatsheet.cpp  smart_ptr_cheatsheet.cpp  smrt_prtrs
tests/: 1_expected.tokens  2_expected.tokens  3_expected.tokens  edge.expected  edge.lox  lexing-2.lox  lexing.lox  test.expected  test.lox  test2.expected  test2.lox
tests/golden/: arithmetic.lox  arithmetic.stdout  bools.lox  bools.stdout  class.lox  class.stdout  class_instance.lox  class_instance.stdout  class_methods.lox  class_methods.stdout  equality.lox  equality.stdout  fib.stdout  fields.lox  fields.stdout  inheritance.lox  inheritance.stdout  init_super.lox  init_super.stdout  loops.lox  loops.stdout  polymorphism.lox  polymorphism.stdout  tern.lox  tern.stdout  tern_stress.lox  tern_stress.stdout  this_class.lox  this_class.stdout
tests/lexing/: 3_expected.tokens  lexing.lox
tools/: dissasembly.py  format.sh  meta_class.py  test.py
utils/: gen_ast.py  test.py
